k8s/spring/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: spring

spec:
  replicas: 1
  selector:
    matchLabels:
      component: spring
  
  template:
    metadata:
      labels:
        component: spring
    spec:
      containers:
        - name: spring
          image: brightdeanz/devops-spring-server
          ports:
            - containerPort: 8080
          
          imagePullPolicy: Always
